src/app/components/header.module.css
.navbar{
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    padding-inline: 25px 15px;
    font-size: 15pt;
    background-color: var(--bg-color);
    top: 0;
    position: fixed;
    z-index: 1;
}

.logo {
    padding-block: 20px 10px;
    height: 80px;
    width: auto;
}

.buttons{
    width: auto;
    height: 0px;
    display: inherit;
    align-items: flex-start;
    padding-left:3rem;
    margin-top: -40px;

    font-family: var(--font-cormorant);
    letter-spacing: .1rem;
}

.item {
    min-width: 10vw;
    padding: .5rem 1rem;
    text-align: left;
}

.dropdown {
    font-size: large;
    font-weight: 500;
    color: var(--gray-text);
    padding: .3rem 0;
}

.item:hover .label {
    color: black;
}

.buttons:hover .item {
    color: var(--gray-text);
}

.item:hover {
    font-weight: 900;
    background-color: var(--bg-color);
}


.dropdown:hover {
    color: black;
    font-weight: 600;
}



/* .buttons:hover .label {
    opacity: .5;
}

.button:hover .item:hover .item {
    opacity: 1;
    height:60px;
}

.button:hover .item:hover .label {
    opacity: 1;
} */

/* 

.header:hover {
    color: black;
}


.dropdown {
    display: none;
}

.item:hover .dropdown {
    display: flex;
    flex-direction: column;
    justify-content: top;
} */

